#303643 by nbz, Berdir | litwol: Fixed CSS namespacing.

--- a/styles/privatemsg-recipients.css
+++ b/styles/privatemsg-recipients.css
@@ -1,4 +1,4 @@
-.message-participants {
+.privatemsg-message-participants {
   border-bottom     : 1px solid #C5C5C5;
   margin            : 0 0 0 250px; 
 
