--- a/styles/privatemsg-view.css
+++ b/styles/privatemsg-view.css
@@ -1,52 +1,55 @@
-.privatemsg-box-fb {
+.privatemsg-message {
   text-align  : left;
 }
-
-.left-column {
+.privatemsg-author-column {
+  float       : left;
+  width       : 250px;
+}
+.privatemsg-message-column{
+  float       : left;
+  width       : 300px;
+}
+.privatemsg-author-column-left {
   float       : left;
   width       : 100px;
 }
-
-.privatemsg-box-fb .avatar-fb {
-  margin      : 5px;
-  text-align  : center;
-}
-.privatemsg-box-fb .picture {
- float    : none; 
- padding  : 0 0 0 0;
-}
-.middle-column {
+.privatemsg-author-column-right {
   float       : left;
   width       : 150px;
   text-align  : right;
 }
-.name {
+.privatemsg-message .privatemsg-author-avatar {
+  margin      : 5px;
+  text-align  : center;
+}
+.privatemsg-message .picture {
+ float    : none; 
+ padding  : 0 0 0 0;
+}
+.privatemsg-author-name {
   margin      : 5px 15px 0px 0px;
   font-size   : 11px;
   font-weight : bold;
 } 
-.date {
+.privatemsg-message-date {
   color         : #777777;
   font-size     : 9px;
   margin        : 0px 15px 0pt 0pt;
 } 
-.right-column {
-  margin:0 0 0 250px;
-}
 .clear-both {
   clear       : both;
 }
-.bottom-border {
+.privatemsg-bottom-border {
   border-bottom: 1px solid #C5C5C5;
   margin       : 0 0 10px 250px;
 }
-.message-body {
+.privatemsg-message-body {
   padding     : 0px;
   margin      : 0 0 0 5px;
   overflow    : auto;
 }
 
-.message-actions li {
+.privatemsg-message-actions li {
   list-style-type:none;
   float:left;
   padding:5px;
